--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "name": "wyrhaximus/cake-ratchet",
+    "type": "cakephp-plugin",
+    "license": "MIT",
     "require": {
-        "cboden/Ratchet": "0.2.*"
+        "cboden/Ratchet": "0.2.*",
+        "composer/installers": "*"
     },
     "config": { 
         "vendor-dir": "Vendor/" 
