--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "cboden/ratchet": "0.2.*",
+        "cboden/Ratchet": "0.2.*",
         "composer/installers": "*"
     },
     "config": { 
