Very shameful typo in packagename :(

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wyrhaximus/ratchet",
+    "name": "wyrihaximus/ratchet",
     "description": "Ratchet websockets integration plugin for CakePHP",
     "homepage": "http://wyrihaximus.net/projects/cakephp/ratchet.html",
     "type": "cakephp-plugin",
