--- a/Config/asset_compress.ini
+++ b/Config/asset_compress.ini
@@ -1,15 +1,4 @@
-[js]
-paths[] = WEBROOT/js/*
-paths[] = APP/Plugin/*/webroot/js/*
-cachePath = WEBROOT/js/cache/
-filters[] = YuiJs
-
-[css]
-paths[] = WEBROOT/css/
-cachePath = WEBROOT/css/cache/
-filters[] = YuiCss
-
-[Ratchet.wamp.js]
+[wamp.js]
 files[] = p:Ratchet:js/web-socket-js/swfobject.js
 files[] = p:Ratchet:js/web-socket-js/web_socket.js
 files[] = p:Ratchet:js/autobahn/license.js
