Added PhuninCake to the list of suggestions as it provides a interface to munin

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "composer/installers": "*"
     },
     "suggest": {
+        "wyrihaximus/phunin-cake": "0.1.0",
         "predis/predis": "0.8.*",
         "predis/predis-async": "dev-master",
         "react/zmq": "0.1.*"
