Requiring @markstory/asset_compress for asset handling and combined both resulting .js files into 1 file

--- a/Config/asset_compress.ini
+++ b/Config/asset_compress.ini
@@ -7,3 +7,4 @@ files[] = p:Ratchet:js/cryptojs/crypto/crypto.js
 files[] = p:Ratchet:js/cryptojs/crypto-sha256-hmac/crypto-sha256-hmac.js
 files[] = p:Ratchet:js/autobahn/autobahn.js
 files[] = p:Ratchet:js/autobahn/useragent.js
+files[] = p:Ratchet:js/cake-wamp.js
