Updated the travis script to load AssetCompress

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,12 @@ env:
 
 before_script:
   - sh -c "mysql -e 'CREATE DATABASE cakephp_test;'"
+  - cd ../../
+  - git clone --depth=50 --branch=master git://github.com/markstory/asset_compress.git markstory/asset_compress
+  - cd WyriHaximus/Ratchet
   - git clone --depth 1 git://github.com/cakephp/cakephp ../cakephp && cd ../cakephp && git checkout $CAKE_VERSION
   - cp -R ../Ratchet plugins/Ratchet
+  - cp -R ../../markstory/asset_compress plugins/AssetCompress
   - chmod -R 777 ../cakephp/app/tmp
   - set +H
   - echo "<?php
@@ -26,6 +30,14 @@ before_script:
       'persistent' => false,
     );
     }" > ../cakephp/app/Config/database.php
+  - echo "
+[js]
+paths[] = WEBROOT/js/*
+cachePath = WEBROOT/js/cache
+[css]
+paths[] = WEBROOT/css/*
+cachePath = WEBROOT/css/cache
+    " >> ../cakephp/app/Config/asset_compress.ini
 
 script:
   - ./lib/Cake/Console/cake test Ratchet AllRatchetTests --stderr
