--- a/.travis.yml
+++ b/.travis.yml
@@ -10,17 +10,8 @@ env:
   - CAKE_VERSION=master
 
 before_script:
-  - sh -c "mysql -e 'CREATE DATABASE cakephp_test;'"
-  - cd ../../
-  - git clone --depth=50 --branch=master git://github.com/markstory/asset_compress.git markstory/asset_compress
-  - cd WyriHaximus/Ratchet
-  - git clone --depth 1 git://github.com/cakephp/cakephp ../cakephp && cd ../cakephp && git checkout $CAKE_VERSION
-  - cp -R ../Ratchet plugins/Ratchet
-  - cp -R ../../markstory/asset_compress plugins/AssetCompress
-  - chmod -R 777 ../cakephp/app/tmp
-  - set +H
-  - cp ../Ratchet/Test/test_app/Config/asset_compress.ini app/Config/
-  - cp ../Ratchet/Test/test_app/Config/database.php app/Config/
+  - chmod +x ./bin/build.sh
+  - ./bin/build.sh
 
 script:
   - ./lib/Cake/Console/cake test Ratchet AllRatchetTests --stderr
