--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_script:
   - cd ../
 
 script:
-  - ./lib/Cake/Console/cake test Ratchet AllRatchetTests --stderr
+  - ./app/Console/cake test Ratchet AllRatchetTests --stderr
   
 notifications:
   webhooks:
