Added vendor-dir directive to the composer file so testing would be easier

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
         "cakephp",
         "websockets"
     ],
+    "config": {
+        "vendor-dir": "Vendor"
+    },
     "authors": [
         {
             "name": "Cees-Jan Kiewiet",
