--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
   - cp ../Ratchet/composer.* app/
   - cd app
   - composer install
-  - echo "App::import('vendor', array('file' => 'autoload'));" >> Config/bootstrap.php
+  - echo "App::import('Vendor', array('file' => 'autoload'));" >> Config/bootstrap.php
   - cd ../
 
 script:
