--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,49 @@
 language: php
 
-services:
-  - redis-server
-
 php:
   - 5.3
   - 5.4
   - 5.5
 
 env:
-  - CAKE_VERSION=master
+  global:
+    - REPO_NAME=Ratchet
+    - PLUGIN_NAME=Ratchet
+    - REQUIRE=""
+
+  matrix:
+    - DB=mysql CAKE_VERSION=master
+    - DB=mysql CAKE_VERSION=2.5
+
+matrix:
+  include:
+    - php: 5.4
+      env:
+        - DB=mysql CAKE_VERSION=master COVERALLS=1
+    - php: 5.4
+      env:
+        - DB=mysql CAKE_VERSION=master PHPCS=1
+    - php: 5.4
+      env:
+        - DB=mysql CAKE_VERSION=master FOC_VALIDATE=1
 
 before_script:
-  - sh -c "mysql -e 'CREATE DATABASE cakephp_test;'"
-  - cd ../../
-  - git clone --depth=50 --branch=master git://github.com/markstory/asset_compress.git markstory/asset_compress
-  - cd WyriHaximus/Ratchet
-  - git clone --depth 1 git://github.com/cakephp/cakephp ../cakephp && cd ../cakephp && git checkout $CAKE_VERSION
-  - cp -R ../Ratchet plugins/Ratchet
-  - cp -R ../../markstory/asset_compress plugins/AssetCompress
-  - chmod -R 777 ../cakephp/app/tmp
-  - set +H
-  - cp ../Ratchet/Test/test_app/Config/asset_compress.ini app/Config/
-  - cp ../Ratchet/Test/test_app/Config/database.php app/Config/
-  - cp ../Ratchet/composer.* app/
-  - cd app
-  - composer install --dev
-  - echo "App::import('Vendor', array('file' => 'autoload'));" >> Config/bootstrap.php
-  - cd ../
+  - cd ..
+  - git clone git://github.com/cakephp/cakephp.git --branch $CAKE_VERSION --depth 1
+  - cd cakephp/app
+  - git clone https://github.com/FriendsOfCake/travis.git
+  - ./travis/before_script.sh
 
 script:
-  - ./app/Console/cake test Ratchet AllRatchetTests --stderr
-  
+  - ./travis/script.sh
+
+after_success:
+  - ./travis/after_success.sh
+
 notifications:
+  email: false
   webhooks:
-    urls: 
+    urls:
       - http://wyrihaximus.net/wyri_projects/wyri_projects/webhook/travisci.json
     on_success: always
     on_failure: always
