--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
+        "react/promise": "~1.0",
         "cboden/Ratchet": "0.3.*",
         "composer/installers": "*",
         "markstory/asset_compress": "v0.9"
