Added PCNTL support, does require the PCNTL extension

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php": ">=5.4.0",
         "react/promise": "~2.0",
         "cboden/Ratchet": "0.3.*",
-        "composer/installers": "*"
+        "composer/installers": "*",
+        "mkraemer/react-pcntl": "~2.0"
     }
 }
