--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "php": ">=5.4.0",
         "react/promise": "~2.0",
         "cboden/Ratchet": "0.3.*",
-        "composer/installers": "*",
-        "mkraemer/react-pcntl": "~2.0"
+        "composer/installers": "*"
+    },
+    "suggest": {
+        "mkraemer/react-pcntl": "Add support for OS signaling"
     }
 }
