--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,14 @@
 {
     "name": "wyrihaximus/ratchet",
-    "version": "0.1.0-DEV",
     "description": "Ratchet websockets integration plugin for CakePHP",
     "homepage": "http://wyrihaximus.net/projects/cakephp/ratchet.html",
-    "type": "cakephp-plugin",
     "license": "MIT",
     "keywords": [
         "cakephp",
         "ratchet",
-        "websockets"
+        "websockets",
+        "cakephp3"
     ],
-    "config": {
-        "vendor-dir": "Vendor"
-    },
     "authors": [
         {
             "name": "Cees-Jan Kiewiet",
@@ -22,11 +18,21 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "react/promise": "~2.0",
-        "cboden/Ratchet": "0.3.*",
-        "composer/installers": "*"
+        "cakephp/cakephp": "^3.0",
+        "cboden/Ratchet": "^0.3",
+        "react/promise": "^2.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "WyriHaximus\\Ratchet\\": "src/"
+        }
     },
     "suggest": {
         "mkraemer/react-pcntl": "Add support for OS signaling"
+    },
+    "require-dev": {
+        "cakephp/debug_kit": "3.0.*@dev",
+        "phpunit/phpunit": "^4.7",
+        "squizlabs/php_codesniffer": "^1.5.0"
     }
 }
