--- a/.travis.yml
+++ b/.travis.yml
@@ -1,52 +1,53 @@
 language: php
+sudo: false
 
+## Cache composer bits
+cache:
+  directories:
+    - vendor
+    - $HOME/.composer/cache
+
+## PHP versions we test against
 php:
   - 5.4
   - 5.5
   - 5.6
+  - 7
   - hhvm
 
+## Build matrix for lowest and highest possible targets
 matrix:
-  allow_failures:
-    - php: hhvm
-
-env:
-  global:
-    - REPO_NAME=Ratchet
-    - PLUGIN_NAME=Ratchet
-    - COMPOSER_VENDOR=Vendor
-    - REQUIRE=""
-
-  matrix:
-    - DB=mysql CAKE_VERSION=master
-    - DB=mysql CAKE_VERSION=2.5
-
   include:
     - php: 5.4
-      env:
-        - DB=mysql CAKE_VERSION=master COVERALLS=1
+      env: dependencies=lowest
+    - php: 5.5
+      env: dependencies=lowest
+    - php: 5.6
+      env: dependencies=lowest
+    - php: 7
+      env: dependencies=lowest
+    - php: hhvm
+      env: dependencies=lowest
     - php: 5.4
-      env:
-        - DB=mysql CAKE_VERSION=master PHPCS=1
-    - php: 5.4
-      env:
-        - DB=mysql CAKE_VERSION=master FOC_VALIDATE=1
+      env: dependencies=highest
+    - php: 5.5
+      env: dependencies=highest
+    - php: 5.6
+      env: dependencies=highest
+    - php: 7
+      env: dependencies=highest
+    - php: hhvm
+      env: dependencies=highest
 
+## Update composer and run the appropriate composer command
 before_script:
-  - git clone https://github.com/WyriHaximus/travis.git --depth 1 ../travis
-  - ../travis/before_script.sh
+  - composer self-update -q
+  - if [ -z "$dependencies" ]; then composer install; fi;
+  - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest -n; fi;
+  - if [ "$dependencies" = "highest" ]; then composer update -n; fi;
+  - composer show -i
 
-script:
-  - ../travis/script.sh
+## Run the actual test
+script: make travis
 
-after_success:
-  - ../travis/after_success.sh
-
-notifications:
-  email: false
-  webhooks:
-    urls:
-      - http://wyrihaximus.net/wyri_projects/wyri_projects/webhook/travisci.json
-    on_success: always
-    on_failure: always
-    on_start: true
+after_script: make travis-coverage
