--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "psr-4": {
             "WyriHaximus\\Ratchet\\": "src/"
         },
-        "files": ["src/functions.php"]
+        "files": ["src/functions_include.php"]
     },
     "autoload-dev": {
         "psr-4": {
