--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
+        "php": "^5.4.0||^7.0",
         "cakephp/cakephp": "^3.0",
         "voryx/thruway": "^0.3.0",
         "react/promise": "^2.0"
