--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
+  "dependencies": {
+    "expose-loader": "^0.7.1",
+    "persistent-autobahn": "~0.0.2"
+  },
   "devDependencies": {
-    "gulp": "^3.6.0",
-    "gulp-concat": "^2.2.0",
-    "gulp-uglify": "^0.2.1",
-    "gulp-jshint": "^1.5.1"
+    "babel-core": "^6.0.16",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.0.15",
+    "babel-plugin-transform-react-constant-elements": "^6.0.14",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "json-loader": "^0.5.4",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1",
+    "mocha": "~2.4.5",
+    "chai": "~3.5.0",
+    "sinon": "~1.17.3"
   }
 }
