--- a/composer.json
+++ b/composer.json
@@ -44,5 +44,8 @@
         "squizlabs/php_codesniffer": "^1.5.6",
         "vectorface/dunit": "^2.0",
         "phake/phake": "^2.1"
+    },
+    "config": {
+        "sort-packages": true
     }
 }
