--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,9 @@
     "require": {
         "php": "^5.4.0||^7.0",
         "cakephp/cakephp": "^3.0",
-        "voryx/thruway": "^0.4",
-        "react/promise": "^2.0"
+        "igorw/get-in": "^1.0",
+        "react/promise": "^2.0",
+        "voryx/thruway": "^0.4"
     },
     "autoload": {
         "psr-4": {
