--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "expose-loader": "^0.7.1",
-    "persistent-autobahn": "~0.0.10"
+    "persistent-autobahn": "~0.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.16",
@@ -10,12 +10,12 @@
     "babel-plugin-transform-react-constant-elements": "^6.0.14",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
-    "json-loader": "^0.5.4",
-    "react-hot-loader": "^1.3.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1",
-    "mocha": "~2.4.5",
     "chai": "~3.5.0",
-    "sinon": "~1.17.3"
+    "json-loader": "^0.5.4",
+    "mocha": "~2.4.5",
+    "react-hot-loader": "^1.3.0",
+    "sinon": "~1.17.3",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
   }
 }
